@@ -1,0 +1,22 @@
+dev-python/docutils doc? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+dev-python/configobj dev-python/httplib2 dev-python/lxml >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
+0
+https://github.com/JNRowe/cupage/tarball/0.5.2 -> cupage-0.5.2.tar.gz
+
+http://jnrowe.github.com/cupage
+GPL-3
+A tool to check for updates on web pages
+~amd64 ~x86
+distutils multilib python toolchain-funcs
+doc
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
