@@ -20,6 +20,8 @@ REM 2011-01-14 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/pydelicious
 REM 2011-01-14 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pydelicious-0.6 %a
 REM 2011-01-15 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/isodate-0.4.3 %a
 REM 2011-01-15 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/isodate-0.4.3 %a
+REM 2011-02-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-client/cupage-0.5.2 %a
+REM 2011-02-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-client/cupage-0.5.2 %a
 REM 2011-02-06 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-util/ditz-0.5-r1 %a
 REM 2011-02-06 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-util/ditz-0.5-r1 %a
 REM 2011-02-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/rstctl-0.4 %a
