@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX cupage-0.5.1-Fixed-usage-without-termstyle.patch 865 RMD160 f94f2481bbdacd080aa900f3ced5e00b58fcb80a SHA1 fbae88cc8f9baa5954ba658634dcf8f78a3b79a1 SHA256 23c0db8163bfcd14525cb53f5ae3d1e951f62acb4a278db0bd097cf4ddac1b0f
 DIST cupage-0.5.1.tar.gz 41297 RMD160 48bfa3798630100ca1e01557ef1b7cf689e9c4ff SHA1 eab5d92565f7e7b30fcc17ab97445934a1a966c9 SHA256 8b69dc7b125cd4927da7e13a9f8311683630bf8d78b2be91b7bcd758225a26f1
+DIST cupage-0.5.2.tar.gz 38393 RMD160 b1c2d75f5ef99858caf225e511fd21fdb9354d0a SHA1 2ef562271bc4b3c58da5997e2594db6697365d38 SHA256 b0bc59ce0a96f7d17cb6dafa94ef94048004d395b856dcd75bb2283067737cc4
 EBUILD cupage-0.5.1.ebuild 1147 RMD160 64a6cf921b931d7abbcebffd1a5592332775ae84 SHA1 593930e0a38798a1483a3023205483ea0a5b8f4c SHA256 c1e0845ed0fd83a5da3ec7f04ef8e057d4500c66dcb2c881645e62b3157c5913
-MISC ChangeLog 3281 RMD160 2b41606dc00059552ffcf6029281350325612e1b SHA1 6a7165c5772c0b322d81ee6d67c017c47935ed14 SHA256 eccb6933a89550829d444e47be84bcbc53eeeec33b132ce38804cd7faa6e0985
+EBUILD cupage-0.5.2.ebuild 1060 RMD160 01316659ac4abb1ca8047a06d01272a209b2b7d3 SHA1 12a33620bb0fdb59fb3772cbe018a476eeeccee8 SHA256 5e0670d967f5867f3869eb6cd7409eb127e737d78be749ffaf100daac9dc5cfd
+MISC ChangeLog 3400 RMD160 8ff6d13d4f75da089138b50aaa12e5ab10259fa6 SHA1 0166af17cdf9cfebf28cae2c6d035084942be5ba SHA256 b08b04bd4111fca6738099fe875e699f8c9c087919d80a92a81997ca6b774d13
 MISC metadata.xml 821 RMD160 12557063487e0e0d224e7ced43403d64d17bd8d2 SHA1 7abf40668022398ab5b2f17ae93d05720fc3aaa9 SHA256 67364238f64bd2a1a9e86722e06fe7842340bda0ec2592fb97367f6194d03b58
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEUEARECAAYFAk0PuwwACgkQzJrj3cAXR0naxACWIuhV7CwtwvU+8rJwLIY7jY0i
-eACdFveGJgoEm1/1OMIbdScVZNvkVTs=
-=gk2O
+iEYEARECAAYFAk0iKKsACgkQzJrj3cAXR0mmuwCgiHrOoUD+GAJ8Lsudvm5VM2Er
+8uMAmwRG+ORVy2ab130ELISXqQCrgzHt
+=bVjw
 -----END PGP SIGNATURE-----
