@@ -1,6 +1,11 @@
 # ChangeLog for www-client/cupage
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cupage-0.5.2 (03 Jan 2011)
+
+  03 Jan 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.2.ebuild:
+  Version bump [245].
 
   20 Dec 2010; James Rowe <jnrowe@gmail.com> cupage-0.5.1.ebuild,
   +files/cupage-0.5.1-Fixed-usage-without-termstyle.patch:
